--- a/render.yaml
+++ b/render.yaml
@@ -3,16 +3,56 @@ services:
     name: news-discord-bot
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: |
+      pip install -r requirements.txt
+      python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
     startCommand: "python bot.py"
+    healthCheckPath: /health
+    autoDeploy: true
     envVars:
       - key: DISCORD_TOKEN
         sync: false
       - key: NEWS_API_KEY
         sync: false
-      - key: CHANNEL_ID
-        sync: false
       - key: MONGODB_URI
         sync: false
       - key: MONGODB_DB
         sync: false
+      - key: PORT
+        value: 10000
+      - key: PYTHON_VERSION
+        value: "3.10.0"
+      - key: DISCORD_CLIENT_ID
+        sync: false
+      - key: DISCORD_CLIENT_SECRET
+        sync: false
+      - key: DISCORD_GUILD_ID
+        sync: false
+      - key: LOG_LEVEL
+        value: "INFO"
+      - key: ENABLE_DAILY_NEWS
+        value: "true"
+      - key: MAX_ARTICLES_PER_REQUEST
+        value: "10"
+      - key: DEFAULT_LANGUAGE
+        value: "en"
+      - key: DEFAULT_COUNTRY
+        value: "us"
+      - key: SUMMARIZER_TIMEOUT
+        value: "30"
+      - key: NEWS_API_TIMEOUT
+        value: "10"
+      - key: RSS_TIMEOUT
+        value: "15"
+      - key: TRANSLATION_TIMEOUT
+        value: "20"
+      - key: ENABLE_CACHING
+        value: "true"
+      - key: CACHE_DURATION
+        value: "3600"
+      - key: ENABLE_RATE_LIMITING
+        value: "true"
+      - key: RATE_LIMIT_REQUESTS
+        value: "100"
+      - key: RATE_LIMIT_PERIOD
+        value: "3600"
