--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,8 @@ services:
     buildCommand: |
       pip install -r requirements.txt
       python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
-    startCommand: "python bot.py"
+    startCommand: |
+      python bot.py
     healthCheckPath: /health
     autoDeploy: true
     envVars:
