--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-discord.py==2.3.2
-requests==2.28.1
-python-dotenv==0.20.0
-newspaper3k==0.2.8
-lxml==4.9.1
-nltk==3.8.1
-pymongo==4.7.2
-flask==3.0.3
-feedparser==6.0.10
-googletrans==4.0.0rc1
+discord.py
+requests
+python-dotenv
+newspaper3k
+lxml
+nltk
+pymongo
+feedparser
+googletrans
