--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-discord.py
-requests
-python-dotenv
-newspaper3k
-lxml
-nltk
-pymongo
-feedparser
-googletrans
+discord.py==2.3.2
+pymongo==4.6.1
+python-dotenv==1.0.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+newspaper3k==0.2.8
+nltk==3.8.1
+feedparser==6.0.10
+PyNaCl==1.5.0
+Flask==3.0.0
+gunicorn==21.2.0
